--- a/code/frontend/frontend/package.json
+++ b/code/frontend/frontend/package.json
@@ -39,6 +39,7 @@
     "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "package.json": "^2.0.1",
     "perfect-scrollbar": "^1.4.0",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
