--- a/code/webapp/package.json
+++ b/code/webapp/package.json
@@ -4,6 +4,7 @@
     "description": "A better frontend",
     "main": "server.js",
     "author": "Evan Steele",
+    "repository": "https://github.com/steelee/AuctionHunter",
     "scripts": {
         "build": "webpack"
     },
@@ -20,7 +21,6 @@
         "vue-axios": "^2.0.2"
     },
     "devDependencies": {
-        "prettier": "^1.9.2",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.0",
@@ -28,9 +28,12 @@
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.7",
         "file-loader": "^1.1.4",
-        "vue-loader": "^13.0.5",
+        "prettier": "^1.9.2",
+        "vue-loader": "15.0.0",
         "vue-template-compiler": "^2.4.4",
-        "webpack": "^3.6.0",
-        "webpack-dev-server": "^2.9.1"
+        "webpack": "^4.0.0",
+        "webpack-cli": "^3.3.1",
+        "webpack-dev-server": "^2.9.1",
+        "webpack-merge": "^4.2.1"
     }
 }
