--- a/code/.gitignore
+++ b/code/.gitignore
@@ -1,3 +1,7 @@
-*.pyc
-__pycache__/
+crawler/Keystone project/tutorial/tutorial/spiders/__pycache__/
+crawler/Keystone project/tutorial/tutorial/__pycache__/
+database/__pycache__/
+
 node_modules/
+
+venv/
